Fixed the spacing of title for profile and watch list with buttons

--- a/client/src/assets/css/PortfolioPage.scss
+++ b/client/src/assets/css/PortfolioPage.scss
@@ -31,6 +31,15 @@
   font-weight: bold;
 }
 
+.NormalPanelTitle2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5em;
+  color: white;
+  font-weight: normal;
+  padding: 0em 0em 0em 0.5em;
+  font-weight: bold;
+}
+
 .PanelTitle {
   font-family: "Roboto", sans-serif;
   font-size: 1.5em;
